2006-11-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_installer.rb (Gem::SourceInfoCache,
	Gem::SourceInfoCacheEntry):  Allow requiring just the source cache
	without the remote fetcher.

2006-11-16  Eric Hodel  <drbrain@segment7.net>

	* test/test_local_cache.rb: Moved to better name

	* test/test_gem_source_info_cache.rb: Renamed test methods to match
	implementations.  Sorted test names.

	* lib/rubygems/remote_installer (Gem::SourceInfoCache): cache_data no
	longer resets dirty flag.  Sped up source cache loading.  Exposed
	cache file name in use.
	
2006-11-15  Eric Hodel  <drbrain@segment7.net>

	* test/, lib/: Made files -w clean.

	* test/: Made tests run independently.

	* Rakefile: Tests now run with warnings on.

2006-11-14  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/user_interaction.rb (Gem::StreamUI#progress_reporter):
	Fix for Gem.configuration.verbose = nil, false

	* lib/rubygems.rb (Gem::configuration): Fix RakeFileUtils pollution.

2006-10-05  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/installer.rb (Gem::Installer::shebang): Updated to
	optionally call env_shebang if the command line option is set.
	(Gem::Installer::shebang_env): Added this method.

2006-09-25  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/rubygems_version.rb (Gem): Bumped to version
	0.9.0.6.

	* lib/rubygems/security.rb (Gem::Security::Exception): Added
	permissions for cert files and directories.
	(Gem::Security::Policy::verify_gem): File.exists? => File.exist?
	(Gem::Security::self.verify_trust_dir): Beefed up code to create
	trust directory structure.
	(Gem::Security::self): Apply permissions when creating trust
	files.

	* lib/rubygems/package.rb (TarInput::initialize): File.exists? =>
	File.exist?

2006-09-24  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems.rb
	(Gem::OperationNotSupportedError::configuration): Added
	method_missing to configuration hash to allow nicer reference
	syntax.
